--- a/doarSP/res/layout/fragment_informacoes.xml
+++ b/doarSP/res/layout/fragment_informacoes.xml
@@ -7,13 +7,13 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/textView1"
-            android:layout_below="@+id/textView1"
+            android:layout_alignLeft="@+id/PrincipalNome"
+            android:layout_below="@+id/PrincipalNome"
             android:layout_marginTop="33dp"
             android:text="@string/signature" />
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/PrincipalNome"
             android:layout_width="206dp"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
