--- a/doarSP/res/layout/activity_main.xml
+++ b/doarSP/res/layout/activity_main.xml
@@ -4,12 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
  
+	        
     <!-- Framelayout to display Fragments -->
     <FrameLayout
         android:id="@+id/frame_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
- 
+        android:layout_height="wrap_content" />
+
     <!-- Listview to display slider menu -->
     <ListView
         android:id="@+id/list_slidermenu"
@@ -21,4 +22,5 @@
         android:dividerHeight="1dp"       
         android:listSelector="@drawable/list_selector"
         android:background="@color/list_background"/>
+    
 </android.support.v4.widget.DrawerLayout>
