--- a/doarSP/res/layout/fragment_hemocentro.xml
+++ b/doarSP/res/layout/fragment_hemocentro.xml
@@ -6,8 +6,9 @@
 
     <fragment
         android:id="@+id/map"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentBottom="true"
         class="com.google.android.gms.maps.MapFragment" />
 
 </RelativeLayout>
