--- a/doarSP/res/layout/fragment_alterardados.xml
+++ b/doarSP/res/layout/fragment_alterardados.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="fill_parent"
     android:padding="10dp"
-    android:scrollbarAlwaysDrawHorizontalTrack="true">
+    android:layout_alignParentBottom="true"
+    android:gravity="bottom">
 
     <TextView
         android:id="@+id/AlterarDadosTitulo"
@@ -129,22 +130,34 @@
         android:checked="true"
         android:text="@string/notificacoes_email"
         android:textSize="15sp" />
-
-    <Button
-        android:id="@+id/AlterarDadosSalvar"
-        android:layout_width="wrap_content"
+    
+    <RelativeLayout
+        android:id="@+id/InnerRelativeLayot"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_toLeftOf="@+id/AlterarDadosCancelar"
-        android:text="@string/salvar" />
+        android:layout_below="@+id/AlterarDadosEmailNot"
+        android:gravity="bottom"
+        android:orientation="horizontal"
+        android:layout_marginTop="40sp">
 
-    <Button
-        android:id="@+id/AlterarDadosCancelar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:text="@string/cancelar" />
+	   	<Button
+	   	    android:id="@+id/AlterarDadosSalvar"
+	   	    android:layout_width="wrap_content"
+	   	    android:layout_height="wrap_content"
+	   	    android:layout_alignParentBottom="true"
+	   	    android:layout_alignParentLeft="true"
+	   	    android:layout_toLeftOf="@+id/AlterarDadosCancelar"
+	   	    android:text="@string/salvar" />
+
+	   	<Button
+	   	    android:id="@+id/AlterarDadosCancelar"
+	   	    android:layout_width="wrap_content"
+	   	    android:layout_height="wrap_content"
+	   	    android:layout_alignParentBottom="true"
+	   	    android:layout_alignParentRight="true"
+	   	    android:text="@string/cancelar" />
+        
+    </RelativeLayout>
  
 </RelativeLayout>
