--- a/doarSP/res/drawable/styles_edit_text.xml
+++ b/doarSP/res/drawable/styles_edit_text.xml
@@ -5,4 +5,6 @@
     <stroke
         android:width="1dp"
         android:color="#cccccc" />
+    <solid 
+        android:color="#FFFFFF"/>
 </shape>
