--- a/doarSP/res/values/styles.xml
+++ b/doarSP/res/values/styles.xml
@@ -1,5 +1,25 @@
-<resources>
-
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
+	
+	<style name="buttonStyle" parent="@android:style/Widget.Button"> 
+		<item name="android:textSize">15sp</item> 
+		<item name="android:textStyle">bold</item> 
+		<item name="android:textColor">#FFFFFF</item> 
+		<item name="android:gravity">center</item> 
+		<item name="android:shadowColor">#000000</item> 
+		<item name="android:shadowDx">1</item> 
+		<item name="android:shadowDy">1</item> 
+		<item name="android:shadowRadius">0.6</item> 
+		<item name="android:background">@drawable/button_custom</item> 
+		<item name="android:padding">10dip</item> 
+	</style>
+	<style name="textStyle">
+	    <item name="android:textSize">16sp</item>
+	</style>
+	<style name="editTextStyle" parent="@style/textStyle">
+	    <item name="android:background">@drawable/styles_edit_text</item>
+	    <item name="android:padding">8dip</item>
+	</style>
+    
     <!--
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
@@ -14,7 +34,9 @@
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
-        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+        <item name="android:buttonStyle">@style/buttonStyle</item>
+        <item name="android:textViewStyle">@style/textStyle</item>
+        <item name="android:editTextStyle">@style/editTextStyle</item>
     </style>
 
 </resources>
