Habilitado os edittext do login e registrar Inserido método de mascara para datas na Util Feito algumas mudanças no ActionBar Criado uma forma de chamar um Fragment através de outro Fragment
Flw vou dormir :)

--- a/doarSP/res/layout/fragment_login.xml
+++ b/doarSP/res/layout/fragment_login.xml
@@ -7,7 +7,7 @@
 
      <LinearLayout
            android:layout_width="match_parent"
-           android:layout_height="fill_parent" >
+           android:layout_height="wrap_content" >
 
 		<RelativeLayout
 		    android:layout_width="match_parent"
@@ -42,8 +42,10 @@
 		        android:layout_alignParentRight="true"
 		        android:layout_below="@+id/loginTV"
 		        android:layout_marginTop="12dp"
-		        android:ems="10" >
-		
+		        android:ems="10" 
+		        android:inputType="textEmailAddress"
+		        android:enabled="true">
+				
 		        <requestFocus />
 		    </EditText>
 		
@@ -55,7 +57,8 @@
 		        android:layout_alignParentRight="true"
 		        android:layout_below="@+id/senhaTV"
 		        android:layout_marginTop="12dp"
-		        android:ems="10" >
+		        android:ems="10" 
+		        android:inputType="textPassword">
 		    </EditText>
 		
 		    <TextView
