--- a/doarSP/res/layout/fragment_principal.xml
+++ b/doarSP/res/layout/fragment_principal.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="20dp">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/PrincipalImageView"
@@ -10,60 +9,42 @@
         android:layout_height="100dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:src="@android:drawable/gallery_thumb" 
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="15dp"/>
+        android:layout_marginLeft="46dp"
+        android:layout_marginTop="38dp"        
+        android:src="@android:drawable/gallery_thumb" />
+
+    <TextView
+        android:id="@+id/PrincipalTIpoSanguineo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/PrincipalNome"
+        android:layout_below="@+id/PrincipalNome"
+        android:layout_marginTop="20dp"
+        android:text="TextView" />
 
     <TextView
         android:id="@+id/PrincipalNome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/PrincipalImageView"
+        android:layout_marginLeft="22dp"
         android:layout_toRightOf="@+id/PrincipalImageView"
-        android:layout_marginBottom="10dp"
-        android:text="Gustavo Palazolo" />
-
-    <TextView
-        android:id="@+id/PrincipalTIpoSanguineo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/PrincipalNome"
-        android:layout_below="@+id/PrincipalNome"
-        android:layout_marginBottom="10dp"
-        android:text="Tipo Sanguineo: A+" />
+        android:text="TextView" />
 
     <TextView
         android:id="@+id/PrincipalUltimaDoacao"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/PrincipalTIpoSanguineo"
-        android:layout_below="@+id/PrincipalTIpoSanguineo"
-        android:text="Data ultima doação: xx/xx/xx" />
+        android:layout_alignBottom="@+id/PrincipalImageView"
+        android:layout_alignRight="@+id/PrincipalTIpoSanguineo"
+        android:text="TextView" />
 
     <CheckBox
         android:id="@+id/PrincipalAptoDoar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/PrincipalImageView"
-        android:layout_below="@+id/PrincipalImageView"
+        android:layout_alignLeft="@+id/PrincipalUltimaDoacao"
+        android:layout_below="@+id/PrincipalUltimaDoacao"
         android:text="@string/principalapto" />
-
-    <TextView
-        android:id="@+id/ultimasSolicitacoes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/PrincipalAptoDoar"
-        android:layout_below="@+id/PrincipalAptoDoar"
-        android:text="@string/ultimasolicitacoes"
-        android:layout_marginTop="25dp"
-        android:layout_marginBottom="20dp"
-        android:textStyle="bold" />
-    
-    <ListView
-        android:id="@+id/lista_doacoes"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_below="@+id/ultimasSolicitacoes" />
  
 </RelativeLayout>
