--- a/doarSP/res/layout/fragment_registrar.xml
+++ b/doarSP/res/layout/fragment_registrar.xml
@@ -49,7 +49,10 @@
 		        android:inputType="textPersonName"
 		        android:layout_marginTop="6dp"
 		        android:layout_marginBottom="10dp"
-		        />
+		        >
+		
+		        <requestFocus />
+		    </EditText>
 		
 		    <TextView
 		        android:id="@+id/RegistrarDadosEmailTV"
@@ -170,8 +173,17 @@
 			   	    android:layout_height="wrap_content"
 			   	    android:layout_alignParentBottom="true"
 			   	    android:layout_alignParentLeft="true"
-			   	    android:layout_alignParentRight="true"
+			   	    android:layout_marginRight="10dp"
+			   	    android:layout_toLeftOf="@+id/RegistrarDadosCancelar"
 			   	    android:text="@string/salvar" />
+		
+			   	<Button
+			   	    android:id="@+id/RegistrarDadosCancelar"
+			   	    android:layout_width="wrap_content"
+			   	    android:layout_height="wrap_content"
+			   	    android:layout_alignParentBottom="true"
+			   	    android:layout_alignParentRight="true"
+			   	    android:text="@string/cancelar" />
 		        
 		    </RelativeLayout>
 		</RelativeLayout>
