Ajuste no botão salvar do manter_solicitação. (reverted from commit cb7380f58022ff4938cf95aabf991d787fc71770)

--- a/doarSP/res/layout/fragment_mantersolicitacao.xml
+++ b/doarSP/res/layout/fragment_mantersolicitacao.xml
@@ -148,7 +148,7 @@
 			        android:layout_alignParentRight="true"
 			        android:layout_below="@dimen/activity_horizontal_margin"
 			        android:layout_marginTop="12dp"
-			        android:text="@string/salvar" />
+			        android:text="@string/entrar" />
 			        
 			
 
