--- a/doarSP/res/layout/fragment_alterardados.xml
+++ b/doarSP/res/layout/fragment_alterardados.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/ScrollView01"
+    android:id="@+id/AlterarScroll"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:scrollbars="vertical" >
 
      <LinearLayout
            android:layout_width="match_parent"
-           android:layout_height="fill_parent" >
+           android:layout_height="wrap_content" >
     
 		<RelativeLayout
 		    android:layout_width="match_parent"
 		    android:layout_height="fill_parent"
 		    android:padding="10dp"
-		    android:layout_alignParentBottom="true"
 		    android:gravity="bottom">
 		
 		    <TextView
@@ -27,7 +26,8 @@
 		        android:layout_alignParentTop="true"
 		        android:textSize="18sp"
 		        android:textStyle="bold"
-		        android:text="@string/alterardadostitulo" />
+		        android:layout_marginBottom="15dp"
+		        android:text="@string/configuracao" />
 		
 		    <TextView
 		        android:id="@+id/AlterarDadosNomeTV"
@@ -48,10 +48,7 @@
 		        android:inputType="textPersonName"
 		        android:layout_marginTop="6dp"
 		        android:layout_marginBottom="10dp"
-		        >
-		
-		        <requestFocus />
-		    </EditText>
+		        />
 		
 		    <TextView
 		        android:id="@+id/AlterarDadosEmailTV"
@@ -72,13 +69,36 @@
 		        android:inputType="textEmailAddress"
 		        android:layout_marginTop="6dp"
 		        android:layout_marginBottom="10dp"/>
+		    
+		    <TextView
+		        android:id="@+id/AlterarSenhaTV"
+		        android:textSize="16sp"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_alignParentLeft="true"
+		        android:layout_below="@id/AlterarDadosEmail"
+		        android:text="@string/senha" />
+		    
+		    <EditText
+		        android:id="@+id/AlterarSenha"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_alignParentLeft="true"
+		        android:layout_alignParentRight="true"
+		        android:layout_below="@+id/AlterarSenhaTV"
+		        android:ems="10"
+		        android:inputType="textPassword"
+		        android:padding="8dp"
+		        android:textSize="16sp" 
+		        android:layout_marginTop="6dp"
+		        android:layout_marginBottom="10dp"/>
 		
 		    <Spinner
 		        android:id="@+id/AlterarDadosTipo"
 		        android:layout_width="wrap_content"
 		        android:layout_height="wrap_content"
 		        android:layout_alignRight="@+id/AlterarDadosEmail"
-		        android:layout_below="@+id/AlterarDadosEmail"
+		        android:layout_below="@+id/AlterarSenha"
 		        android:layout_toRightOf="@+id/AlterarDadosNascimentoTV"
 		        android:entries="@array/tipos_Sanguineos" />
 		
@@ -107,7 +127,7 @@
 		        android:id="@+id/AlterarDadosTipoTV"
 		        android:layout_width="wrap_content"
 		        android:layout_height="wrap_content"
-		        android:layout_alignLeft="@+id/AlterarDadosEmail"
+		        android:layout_alignLeft="@+id/AlterarSenha"
 		        android:layout_alignTop="@+id/AlterarDadosTipo"
 		        android:text="@string/tipo_sanguineo"
 		        android:layout_marginTop="10dp"/>
@@ -149,18 +169,8 @@
 			   	    android:layout_height="wrap_content"
 			   	    android:layout_alignParentBottom="true"
 			   	    android:layout_alignParentLeft="true"
-			   	    android:layout_marginRight="10dp"
-			   	    android:layout_toLeftOf="@+id/AlterarDadosCancelar"
-			   	    android:text="@string/salvar" />
-		
-			   	<Button
-			   	    android:id="@+id/AlterarDadosCancelar"
-			   	    android:layout_width="wrap_content"
-			   	    android:layout_height="wrap_content"
-			   	    android:layout_alignParentBottom="true"
 			   	    android:layout_alignParentRight="true"
-			   	    android:text="@string/cancelar" />
-		        
+			   	    android:text="@string/salvar" />
 		    </RelativeLayout>
 		</RelativeLayout>
 	</LinearLayout>
