--- a/doarSP/res/layout/fragment_registrar.xml
+++ b/doarSP/res/layout/fragment_registrar.xml
@@ -8,13 +8,12 @@
 
      <LinearLayout
            android:layout_width="match_parent"
-           android:layout_height="fill_parent" >
+           android:layout_height="wrap_content" >
     
 		<RelativeLayout
 		    android:layout_width="match_parent"
 		    android:layout_height="fill_parent"
 		    android:padding="10dp"
-		    android:layout_alignParentBottom="true"
 		    android:gravity="bottom">
 		
 		    <TextView
