--- a/doarSP/res/layout/item_hemocentro.xml
+++ b/doarSP/res/layout/item_hemocentro.xml
@@ -7,7 +7,7 @@
         android:id="@+id/imagemPosto"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:src="@drawable/ic_whats_hot" 
+        android:src="@drawable/ic_info" 
         android:layout_gravity="center"/>
 
     <TextView
